tests/baselines/reference/selfReferencingFile2.errors.txt
tests/cases/compiler/selfReferencingFile2.ts(1,21): error TS6053: File 'tests/cases/selfReferencingFile2.ts' not found.


==== tests/cases/compiler/selfReferencingFile2.ts (1 errors) ====
    ///<reference path='../selfReferencingFile2.ts'/>
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'tests/cases/selfReferencingFile2.ts' not found.
    
    class selfReferencingFile2 {
    
    }